--- a/.env
+++ b/.env
@@ -1,3 +1,9 @@
-PORT = 8000
-MONGODB_URL=
-JWT_SECRET ="10934324322r5688"
+PORT=8000
+MONGODB_URL=mongodb+srv://jaybhuptani1054:jay1054@eco.cn23hvr.mongodb.net/?appName=Eco
+CORS_ORIGIN=*
+ACCESS_TOKEN_SECRET=jwt_access_7f8e9c1a2b3d4e5f6g7h8i9j
+ACCESS_TOKEN_EXPIRY=15d
+REFRESH_TOKEN_SECRET=jwt_refresh_9a8b7c6d5e4f3a2b1c0d
+REFRESH_TOKEN_EXPIRY=7d
+EMAIL_USER=jaybhuptani10@gmail.com
+EMAIL_PASS=jlxf kyjv ruww hmzd
