--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "node src/index.js",
+    "start": "find . -maxdepth 4 -not -path '*/.*' -not -path './node_modules*' && node src/index.js",
     "build": "echo 'No build step required'",
     "dev": "nodemon src/index.js"
   },
