--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "dating-app-backend",
+  "name": "trial-app-backend",
   "version": "1.0.0",
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "find . -maxdepth 4 -not -path '*/.*' -not -path './node_modules*' && node src/index.js",
+    "start": "node src/index.js",
     "build": "echo 'No build step required'",
     "dev": "nodemon src/index.js"
   },
